dataset1235/2025-2/2868285114/users/221116065/executions/3792430146_3974737893.log
== SUBMISSION (2025-09-02 22:35:00)
-- CODE: 
n_X = int(input("Qual o numero?: "))
n_Y = int(input("Qual o outro numero?: "))

if n_X % n_Y == 0:
  divisao = n_X // n_Y
  print(divisao)
  print("sim")

else:
  print(n_X % n_Y)
print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:35:01)
-- CODE: 
n_X = int(input("Qual o numero?: "))
n_Y = int(input("Qual o outro numero?: "))

if n_X % n_Y == 0:
  divisao = n_X // n_Y
  print(divisao)
  print("sim")

else:
  print(n_X % n_Y)
print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:33:14)
-- CODE: 
n_X = int(input("Qual o numero?: "))
n_Y = int(input("Qual o outro numero?: "))

if n_X % n_Y == 0:
  divisao = x // y
  print(divisao)
  print("sim")

else:
  print(n_X % n_Y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
Qual o numero?: Qual o outro numero?: 3
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    divisao = x // y
              ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    divisao = x // y
              ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    divisao = x // y
              ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
Qual o numero?: Qual o outro numero?: 11
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
Qual o numero?: Qual o outro numero?: 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:35:27)
-- CODE: 
n_X = int(input("Qual o numero?: "))
n_Y = int(input("Qual o outro numero?: "))

if n_X % n_Y == 0:
  divisao = n_X // n_Y
  print(divisao)
  print("sim")

else:
  print(n_X % n_Y)
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:35:19)
-- CODE: 
n_X = int(input("Qual o numero?: "))
n_Y = int(input("Qual o outro numero?: "))

if n_X % n_Y == 0:
  divisao = n_X // n_Y
  print(divisao)
  print("sim")

else:
  print(n_X % n_Y)
  print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:33:03)
-- CODE: 
n_X = int(input("Qual o numero?: "))
n_Y = int(input("Qual o outro numero?: "))

if n_X % == 0:
  divisao = x // y
  print(divisao)
  print("sim")

else:
  print(n_X % n_Y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
File "XXXX", line 4
    if n_X % == 0:
             ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
File "XXXX", line 4
    if n_X % == 0:
             ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
File "XXXX", line 4
    if n_X % == 0:
             ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
File "XXXX", line 4
    if n_X % == 0:
             ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
File "XXXX", line 4
    if n_X % == 0:
             ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
File "XXXX", line 4
    if n_X % == 0:
             ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:34:58)
-- CODE: 
n_X = int(input("Qual o numero?: "))
n_Y = int(input("Qual o outro numero?: "))

if n_X % n_Y == 0:
  divisao = n_X // n_Y
  print(divisao)
  print("sim")

else:
  print(n_X % n_Y)
print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:24:26)
-- CODE: 
n_X = int(input("Qual o numero?: "))
n_Y = int(input("Qual o outro numero?: "))

calculo = n_X / n_Y

if n_x % 0:
  print(calculo)
  print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if n_x % 0:
       ^^^
NameError: name 'n_x' is not defined. Did you mean: 'n_X'?
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if n_x % 0:
       ^^^
NameError: name 'n_x' is not defined. Did you mean: 'n_X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if n_x % 0:
       ^^^
NameError: name 'n_x' is not defined. Did you mean: 'n_X'?
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if n_x % 0:
       ^^^
NameError: name 'n_x' is not defined. Did you mean: 'n_X'?
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if n_x % 0:
       ^^^
NameError: name 'n_x' is not defined. Did you mean: 'n_X'?
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if n_x % 0:
       ^^^
NameError: name 'n_x' is not defined. Did you mean: 'n_X'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:24:45)
-- CODE: 
n_X = int(input("Qual o numero?: "))
n_Y = int(input("Qual o outro numero?: "))

calculo = n_X / n_Y

if n_X % 0:
  print(calculo)
  print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if n_X % 0:
       ~~~~^~~
ZeroDivisionError: integer modulo by zero
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if n_X % 0:
       ~~~~^~~
ZeroDivisionError: integer modulo by zero
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if n_X % 0:
       ~~~~^~~
ZeroDivisionError: integer modulo by zero
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if n_X % 0:
       ~~~~^~~
ZeroDivisionError: integer modulo by zero
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if n_X % 0:
       ~~~~^~~
ZeroDivisionError: integer modulo by zero
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if n_X % 0:
       ~~~~^~~
ZeroDivisionError: integer modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:25:15)
-- CODE: 
n_X = int(input("Qual o numero?: "))
n_Y = int(input("Qual o outro numero?: "))

calculo = n_X / n_Y

if calculo % 0:
  print(calculo)
  print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if calculo % 0:
       ~~~~~~~~^~~
ZeroDivisionError: float modulo
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if calculo % 0:
       ~~~~~~~~^~~
ZeroDivisionError: float modulo
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if calculo % 0:
       ~~~~~~~~^~~
ZeroDivisionError: float modulo
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if calculo % 0:
       ~~~~~~~~^~~
ZeroDivisionError: float modulo
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if calculo % 0:
       ~~~~~~~~^~~
ZeroDivisionError: float modulo
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if calculo % 0:
       ~~~~~~~~^~~
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:34:39)
-- CODE: 
n_X = int(input("Qual o numero?: "))
n_Y = int(input("Qual o outro numero?: "))

if n_X % n_Y == 0:
  divisao = n_X // n_Y
  print(divisao)
  print("sim")

else:
  print(n_X % n_Y)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
Qual o numero?: Qual o outro numero?: 3
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
Qual o numero?: Qual o outro numero?: 11
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
Qual o numero?: Qual o outro numero?: 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:27:19)
-- CODE: 
n_X = int(input("Qual o numero?: "))
n_Y = int(input("Qual o outro numero?: "))

calculo = n_X / n_Y

if calculo % 0:
  print(calculo)
  print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if calculo % 0:
       ~~~~~~~~^~~
ZeroDivisionError: float modulo
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if calculo % 0:
       ~~~~~~~~^~~
ZeroDivisionError: float modulo
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if calculo % 0:
       ~~~~~~~~^~~
ZeroDivisionError: float modulo
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if calculo % 0:
       ~~~~~~~~^~~
ZeroDivisionError: float modulo
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if calculo % 0:
       ~~~~~~~~^~~
ZeroDivisionError: float modulo
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if calculo % 0:
       ~~~~~~~~^~~
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:34:25)
-- CODE: 
n_X = int(input("Qual o numero?: "))
n_Y = int(input("Qual o outro numero?: "))

if n_X % n_Y == 0:
  divisao = n_X // n_Y
  print(divisao)
  print("sim")

else:
  print(n_X % n_Y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
Qual o numero?: Qual o outro numero?: 3
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
Qual o numero?: Qual o outro numero?: 11
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
Qual o numero?: Qual o outro numero?: 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
